# trae-04

./: CMakeLists.txt  README.md  config.json  team_task_manager.db
config/: app.conf  config.h  config.json  version.h.in
db/: init.sql  schema.sql
include/: ApiHandler.h  App.hpp  DatabaseManager.h  Exchange.h  OrderBook.h  audit_log_service.h  auth_service.h  config.h  database.h  http_server.h  models.h  order.h  product.h  project_service.h  result.h  server.h  stats.h  stats_service.h  task_service.h  utils.h
include/config/: Config.hpp
include/http/: HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  handler.h
include/model/: Driver.h  RideRequest.h  Rider.h  Trip.h  shortlink.h
include/repository/: DriverRepository.h  RideRequestRepository.h  RiderRepository.h  TripRepository.h
include/service/: ApiKeyService.hpp  ClientService.hpp  DriverService.h  MatchingService.h  QuotaService.hpp  RideRequestService.h  RiderService.h  StatsService.hpp  TripService.h  shortlink_service.h
include/storage/: ApiKeyRepository.hpp  CallLogRepository.hpp  ClientRepository.hpp  Database.hpp  db_manager.h  shortlink_dao.h
include/utils/: Config.h  Database.h  Logger.h  Logger.hpp  Utils.hpp  config.h  logger.h  lru_cache.h  time.h
sql/: schema.sql
src/: ApiHandler.cpp  App.cpp  DatabaseManager.cpp  Exchange.cpp  OrderBook.cpp  audit_log_service.cpp  auth_service.cpp  database.cpp  http_server.cpp  main.cpp  order_service.cpp  product_service.cpp  project_service.cpp  server.cpp  stats_service.cpp  task_service.cpp  utils.cpp
src/auth/: auth_service.cpp  auth_service.h  jwt.cpp  jwt.h  simple_jwt.cpp  simple_jwt.h  simple_password.cpp  simple_password.h
src/common/: config.cpp  config.h  error.cpp  error.h  json.cpp  json.h  logger.cpp  logger.h
src/config/: Config.cpp
src/controller/: MovieController.cpp  MovieController.h  StatsController.cpp  StatsController.h  UserController.cpp  UserController.h  WatchRecordController.cpp  WatchRecordController.h
src/controllers/: AccountController.cpp  AccountController.h  BudgetController.cpp  BudgetController.h  CategoryController.cpp  CategoryController.h  SummaryController.cpp  SummaryController.h  TransactionController.cpp  TransactionController.h  base_controller.cpp  base_controller.h  problem_controller.cpp  problem_controller.h  record_controller.cpp  record_controller.h  user_controller.cpp  user_controller.h
src/dao/: AccountDAO.cpp  AccountDAO.h  BudgetDAO.cpp  BudgetDAO.h  CategoryDAO.cpp  CategoryDAO.h  Database.cpp  Database.h  TransactionDAO.cpp  TransactionDAO.h  base_dao.cpp  base_dao.h  card_dao.cpp  card_dao.h  tag_dao.cpp  tag_dao.h  user_dao.cpp  user_dao.h
src/http/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  handler.cpp
src/model/: Driver.cpp  Movie.h  RideRequest.cpp  Rider.cpp  Trip.cpp  User.h  WatchRecord.h  card.cpp  card.h  tag.cpp  tag.h  user.cpp  user.h
src/models/: Account.h  Budget.h  Category.h  Transaction.h  db_connection.h  db_connection_impl.cpp  db_pool.cpp  db_pool.h  problem.cpp  problem.h  record.cpp  record.h  user.cpp  user.h
src/repository/: DriverRepository.cpp  MovieRepository.cpp  MovieRepository.h  RideRequestRepository.cpp  RiderRepository.cpp  TripRepository.cpp  UserRepository.cpp  UserRepository.h  WatchRecordRepository.cpp  WatchRecordRepository.h
src/service/: ApiKeyService.cpp  ClientService.cpp  DriverService.cpp  MatchingService.cpp  MovieService.cpp  MovieService.h  QuotaService.cpp  RideRequestService.cpp  RiderService.cpp  StatsService.cpp  StatsService.h  TripService.cpp  UserService.cpp  UserService.h  WatchRecordService.cpp  WatchRecordService.h  auth_service.cpp  auth_service.h  card_service.cpp  card_service.h  shortlink_service.cpp  tag_service.cpp  tag_service.h
src/services/: AccountService.cpp  AccountService.h  BudgetService.cpp  BudgetService.h  CategoryService.cpp  CategoryService.h  SummaryService.cpp  SummaryService.h  TransactionService.cpp  TransactionService.h
src/storage/: ApiKeyRepository.cpp  CallLogRepository.cpp  ClientRepository.cpp  Database.cpp  db_manager.cpp  shortlink_dao.cpp
src/util/: json.cpp  json.h  time.cpp  time.h
src/utils/: Config.cpp  Config.h  Database.cpp  DbConnectionPool.cpp  DbConnectionPool.h  Logger.cpp  Logger.h  LruCache.cpp  LruCache.h  TimeUtils.cpp  TimeUtils.h  Utils.cpp  config.cpp  logger.cpp  time.cpp
tests/: CMakeLists.txt  StatsServiceTest.cpp  SummaryServiceTest.cpp  permission_test.cpp  task_query_test.cpp  task_status_test.cpp  test_order_book.cpp
